# sat-water-temps

./: .gitignore  AGENTS.md  CLAUDE.md  D1_MIGRATION_GUIDE.md  Dockerfile  ECO_Converted.py  FRONTEND_MIGRATION_COMPLETE.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_HYBRID.md  README.md  READY_TO_DEPLOY.md  SVELTEKIT_MIGRATION.md  app.py  backfill.sh  list_tasks.sh  migrate_csv_to_d1.py  package-lock.json  package.json  pyproject.toml  reprocess_task.sh  requirements.txt  svelte.config.js  tailwind.config.js  tsconfig.json  wrangler.toml
docs/: DAILY_PROCESSING_OVERVIEW.md  LOCAL_DEVELOPMENT.md  PIXEL_FILTERING_RESEARCH.md  R2_GZIP_BEHAVIOR.md
functions/: tsconfig.json
lambda_functions/: d1.py  initiator.py  landsat_initiator.py  landsat_processor.py  manifest_processor.py  processor.py  shared.py  status_checker.py  task_poller.py
migrations/: 0001_init_schema.sql  0002_hybrid_architecture.sql  0003_ecostress_requests.sql  0004_remove_task_id_unique.sql  0005_remove_status_column.sql  0006_add_filter_stats.sql  0007_ecostress_requests_view.sql  0008_add_dispatched_at.sql  0009_fix_status_zero_scenes.sql  0010_add_app_settings.sql  0011_rename_scrape_to_submit.sql  0012_add_source_column.sql  0013_add_latest_sort_date.sql  0014_add_pixel_size.sql  0015_normalize_dates.sql  0016_unify_data_requests.sql  0017_add_pixel_size_x.sql  0018_add_parquet_path.sql  0019_add_raster_geometry.sql  0020_nodata_status.sql  0021_fix_ecostress_status.sql
public/: feature_archive.html  feature_page.html  index.html
scripts/: backfill-task-ids.sh  (+16 more)
(+153 files in other folders)
