[project]
name = "sat-water-temps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aws-xray-sdk>=2.14.0",
    "boto3>=1.35.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "geopandas>=1.0.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "supabase>=2.13.0",
    "tqdm>=4.66.0",
]
